# CBIR-BallTreeEda2021

./: .gitignore  README.md
BallTree_CPP/: CMakeLists.txt
BallTree_CPP/src/: BallLeaf.hpp  BallTree.hpp  BallTreeInterface.cpp  Funciones.h  GenerateBallTree.cpp  Point.hpp  Timer.hpp
Interfaz_PythonFlask/: BallTreeInterface  GenerateBallTree  app.py  functions.py  pyproject.toml
Interfaz_PythonFlask/static/css/: mystyle.css
Interfaz_PythonFlask/static/js/: canvas.js  script.js
Interfaz_PythonFlask/templates/: index.html
